# hybrid-ev-breakeven-calculator-rs

./: .gitignore  Cargo.toml  Makefile  index.html  tailwind.css
.github/workflows/: gh-pages-deploy.yml
src/: data.rs  hooks.rs  main.rs  parse_dec.rs  style.css
