[package]
name = "hybrid-ev-breakeven-calculator-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Hyper-optimises wasm bundle for size.
# https://book.leptos.dev/deployment/binary_size.html
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.11", features = ["csr", "nightly"] }
leptos_router = { version = "=0.6.8", features = ["csr", "nightly"] }
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
serde = "1.0.201"
